# octopusgarden

./: .gitignore  .golangci.yaml  .goreleaser.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  go.mod  go.sum
.claude/agents/: go-architect.md
.claude/commands/: solve-issue.md
.claude/skills/: generate-examples.md
.github/workflows/: ci.yml  docs-reminder.yml  pr-title.yml  release.yml
cmd/octog/: extract_integration_test.go  main.go  main_integration_test.go  main_test.go  tui.go  tui_windows.go
cmd/octopusgarden/: main.go  main_test.go
docs/: architecture.md  gene-transfusion.md  sessions.md
examples/auction-house/: spec.md
examples/exemplars/rust-rest/: Cargo.toml  Dockerfile
examples/exemplars/rust-rest/src/: handlers.rs  main.rs  models.rs  store.rs
examples/expense-tracker/: spec.md
examples/hello-api/: spec.md
examples/kanban-board/: spec.md
examples/kv-store/: spec.md
examples/sensor-telemetry/: spec.md
examples/todo-app/: spec.md
examples/tui-demo/: spec.md
examples/tui-runbook/: spec.md
examples/tui-slides/: spec.md
examples/tui-timers/: spec.md
examples/tui-todo/: spec.md
internal/attractor/: attractor.go  attractor_test.go  convergence.go  convergence_test.go  diagnosis.go  diagnosis_test.go  doc.go  escalation.go  escalation_test.go  fileparse.go  (+17 more)
schemas/: scenario-format.md  scenario.json  spec-format.md
scripts/: autoissue.py  autoissue.sh  e2e-test.py  e2e-test.sh  gene-benchmark.sh  smoke-test.py  smoke-test.sh  test_autoissue.py
(+272 files in other folders)
